# ccqa_effect_study

./: .gitignore  CITATION.bib  README.md  pyproject.toml
experiment/: run_it.sh
experiment/data/input/: ant.csv  commits.csv  cxf.csv  daffodil.csv  daffodil_jira.csv  gora.csv  groovy.csv  hadoop-ozone.csv  iotdb.csv  isis.csv  jmeter.csv  jspwiki.csv  karaf.csv  knox.csv  openmeetings.csv  pdfbox.csv  plc4x.csv  poi.csv  ratis.csv  ratis_jira.csv  roller.csv  shiro.csv  struts.csv
experiment/data/output/: commits.csv  daffodil_scc.txt  groovy_scc.txt  hadoop-ozone_scc.txt  karaf_scc.txt  ratis_scc.txt
notebooks/: Analysis.ipynb  deeper_analysis_protocol.txt
sq_effect_study/: ana.py  analyse_issue_tracker.py  analyse_sq_history.py  analysis.py  collect_apache_repos.py  collect_gh_repos.py  collect_jira_issues.py  collect_sq_data.py  config.py
